--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
       <i class='bx bx-briefcase design'></i>
       <h1 class="sub-headings">EXPERIENCE</h1>
       <p class="sub-title">Hr Intern |<span> KnowMerit</span></p>
-      <p class="paragraph"> May 2023 - July 2023 </p>
+      <p class="duration"> May 2023 - July 2023 </p>
       <ul class="paragraph">
         <li>Screening and calling the candidates </li>
         <li>Scheduled interview for selected candidates</li>
         <li>Updating the employee database</li>
+      </ul>
+      <ul class="paragraph">
         <li>Took attendances and listing the demos</li>
         <li>Sending offer letters to selected candidates</li>
         <li>Sending scripts and scheduling training for selected candidates</li>
       </ul>
+      
 
     </div>
 
@@ -80,8 +83,10 @@
         <li>HTML & CSS</li>
         <li>Bootstrap</li>
         <li>JavaScript</li>
-        <li>Basic of Python</li>
+      </ul>
+      <ul class="paragraph">
         <li>Ms Office</li>
+        <li>Basic of Python</li>
       </ul>
     </div>
     <!-- activities  -->
